2007-11-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_color_changed), (wp_props_wp_set):
	* gnome-wp-item.c: (gnome_wp_item_new), (gnome_wp_item_free),
	(gnome_wp_item_dup):
	* gnome-wp-item.h:
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml), (gnome_wp_xml_save_list):
	be more careful when reading background information from GConf and make
	sure we don't choke on NULL values later on (bug #492903)

2007-11-01  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Joel Pfaff <joel.pfaff@gmail.com>

	* appearance-themes.c: (themes_init): fix build without libXcursor

2007-10-30  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_installer_run): revert last patch,
	it's just too ugly as long as the "one dialog per installed file" issue
	isn't fixed

2007-10-30  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Benjamin Gramlich <benjamin.gramlich@gmail.com>

	* theme-installer.c: (gnome_theme_installer_run): allow the user to
	select multiple themes to install at once (first part of the fix for
	bug #124554)

2007-10-30  Jens Granseuer  <jensgr@gmx.net>

	When installing multiple themes at once, don't ask the user whether to
	apply after each theme. Instead, simply show a success message after
	installation has finished, and ask only if a single theme has been
	installed.

	* theme-installer.c: (gnome_theme_install_real),
	(transfer_done_cb): check whether there are multiple themes to install
	up front, and skip the apply dialog if so

2007-10-30  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real): also update the icon
	cache for icon themes with cursors

2007-10-30  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (file_theme_type), (gnome_theme_install_real):
	teach the installer to recognize cursor themes and icon themes with
	cursors and how to apply them

2007-10-29  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (gtk_theme_changed), (window_theme_changed),