@@ -679,8 +679,7 @@ read_cursor_fonts (void)
 
 static void
 handle_change_signal (gpointer             data,
-		      GnomeThemeChangeType change_type,
-		      GnomeThemeElement    element)
+		      GnomeThemeChangeType change_type)
 {
 #ifdef DEBUG
   gchar *type_str = NULL;
@@ -696,7 +695,7 @@ handle_change_signal (gpointer             data,
   for (list = callbacks; list; list = list->next)
   {
     ThemeCallbackData *callback_data = list->data;
-    (* callback_data->func) (theme, change_type, element, callback_data->data);
+    (* callback_data->func) (theme, change_type, callback_data->data);
   }
 
 #ifdef DEBUG
@@ -706,6 +705,15 @@ handle_change_signal (gpointer             data,
     type_str = "icon";
   else if (theme->type == GNOME_THEME_TYPE_CURSOR)
     type_str = "cursor";
+  else if (theme->type == GNOME_THEME_TYPE_REGULAR) {
+    GnomeThemeInfo *rtheme = (GnomeThemeInfo *) theme;
+    if (rtheme->has_gtk)
+      element_str = "gtk-2";
+    else if (rtheme->has_keybinding)
+      element_str = "keybinding";
+    else if (rtheme->has_metacity)
+      element_str = "metacity";
+  }
 
   if (change_type == GNOME_THEME_CHANGE_CREATED)
     change_str = "created";
@@ -713,13 +721,6 @@ handle_change_signal (gpointer             data,
     change_str = "changed";
   else if (change_type == GNOME_THEME_CHANGE_DELETED)
     change_str = "deleted";
-
-  if (element & GNOME_THEME_GTK_2)
-    element_str = "gtk-2";
-  else if (element & GNOME_THEME_GTK_2_KEYBINDING)
-    element_str = "keybinding";
-  if (element & GNOME_THEME_METACITY)
-    element_str = "metacity";
 
   if (type == GNOME_THEME_TYPE_REGULAR)
     {
@@ -785,7 +786,7 @@ update_theme_index (GnomeVFSURI       *index_uri,
 
 	  g_hash_table_insert (theme_hash_by_uri, g_strdup (common_theme_dir), theme_info);
 	  add_theme_to_hash_by_name (theme_hash_by_name, theme_info);
-	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_CREATED, key_element);
+	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_CREATED);
 	}
     }
   else
@@ -816,15 +817,15 @@ update_theme_index (GnomeVFSURI       *index_uri,
 
       if (theme_exists && theme_used_to_exist)
 	{
-	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_CHANGED, key_element);
+	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_CHANGED);
 	}
       else if (theme_exists && !theme_used_to_exist)
 	{
-	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_CREATED, key_element);
+	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_CREATED);
 	}
       else if (!theme_exists && theme_used_to_exist)
 	{
-	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_DELETED, key_element);
+	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_DELETED);
 	}
 
       if (!theme_info->has_metacity && !theme_info->has_keybinding && !theme_info->has_gtk)
@@ -929,7 +930,7 @@ update_common_theme_dir_index (GnomeVFSURI   *theme_index_uri,
 	{
 	  g_hash_table_insert (hash_by_uri, g_strdup (common_theme_dir), theme_info);
 	  add_theme_to_hash_by_name (hash_by_name, theme_info);
-	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_CREATED, 0);
+	  handle_change_signal (theme_info, GNOME_THEME_CHANGE_CREATED);
 	}
     }
   else
@@ -943,7 +944,7 @@ update_common_theme_dir_index (GnomeVFSURI   *theme_index_uri,
    	      remove_theme_from_hash_by_name (hash_by_name, old_theme_info);
 	      g_hash_table_insert (hash_by_uri, g_strdup (common_theme_dir), theme_info);
 	      add_theme_to_hash_by_name (hash_by_name, theme_info);
-	      handle_change_signal (theme_info, GNOME_THEME_CHANGE_CHANGED, 0);
+	      handle_change_signal (theme_info, GNOME_THEME_CHANGE_CHANGED);
 	      theme_free (old_theme_info);
 	    }
 	  else
@@ -956,7 +957,7 @@ update_common_theme_dir_index (GnomeVFSURI   *theme_index_uri,
 	  g_hash_table_remove (hash_by_uri, common_theme_dir);
    	  remove_theme_from_hash_by_name (hash_by_name, old_theme_info);
 
-	  handle_change_signal (old_theme_info, GNOME_THEME_CHANGE_DELETED, 0);
+	  handle_change_signal (old_theme_info, GNOME_THEME_CHANGE_DELETED);
 	  theme_free (old_theme_info);
 	}
     }
