@@ -1,3 +1,10 @@
+2007-11-11  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-info.c: (handle_change_signal), (update_theme_index),
+	(update_common_theme_dir_index):
+	* gnome-theme-info.h: remove more redundant info from the theme changed
+	callback
+
 2007-10-29  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c: (theme_compare), (theme_free),
