@@ -1,3 +1,7 @@
+2007-11-11  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-method.c: (theme_changed_callback): adapt to callback change
+
 2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* theme-method.c: (invoke_monitors): ANSIfication of
