@@ -1,3 +1,9 @@
+2007-11-11  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (changed_on_disk_cb):
+	* appearance-themes.c: (theme_changed_on_disk_cb): adapt to modified
+	theme change callback
+
 2007-11-03  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-desktop.c: (wp_color_changed), (wp_props_wp_set):
